Changed design to remove unnecessary scrollbars and borders, also fixed error with calender displaying null row

--- a/app/assets/stylesheets/desktop/homepage/dashboard.scss
+++ b/app/assets/stylesheets/desktop/homepage/dashboard.scss
@@ -12,8 +12,9 @@
 		position: relative;
 		height: 100%;
 		width: 50%;
-		overflow-y: scroll;
+		overflow-y: auto;
 		overflow-x: hidden;
+		scroll-behavior: auto;
 	}
 
 	.form .form__time{
@@ -40,7 +41,7 @@
 		height: 100%;
 		width: 49%;
 		overflow-x: hidden;
-		overflow-y: scroll;
+		overflow-y: auto;
 		position: absolute;
 		top: 0;
 		left: 50%;
