--- a/app/assets/stylesheets/desktop/homepage/projectTask.scss
+++ b/app/assets/stylesheets/desktop/homepage/projectTask.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 950px){
 	.project-task{
 		position: relative;
-		border-top: solid;
+		border-bottom: solid;
 	}
 
 	.project-task input{
